--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="city">City:</string>
     <string name="get_data">Get Data</string>
     <string name="zipcode">ZipCode</string>
+    <string name="founed">Founed =</string>
 </resources>
